--- a/src/views/jp/index.ejs
+++ b/src/views/jp/index.ejs
@@ -1,6 +1,6 @@
-<% let meta={ title: "indexTitleテスト" , description: "トップページの説明" , keywords: "test, bridge" , ogTitle: "ページタイトル" ,
+<% let meta={ title: "株式会社テクロス" , description: "トップページの説明" , keywords: "test, bridge" , ogTitle: "ページタイトル" ,
   ogDescription: "ページ説明文" , ogtype: "" , ogUrl: "" , ogImage: "" , ogsiteName: "" , ogLocate: "" , basePath: "../../" ,
-  selected: "" , optionJp: "日本語" , optionEn: "英語" , terms: "利用規約" , privacy: "個人情報保護方針", lang: "jp/" }; %>
+  selected: "" , optionJp: "日本語" , optionEn: "英語" , terms: "利用規約" , privacy: "個人情報保護方針" , lang: "jp/" }; %>
   <%- include('/common/_metaCreate', { meta }) %>
     <!DOCTYPE html>
     <html lang="ja">
@@ -32,17 +32,17 @@
 
 
               <div class="top-hero-swiper-heading">
-                <h2 class="top-hero-heading-title c-heading-title">
+                <h2 class="top-hero-swiper-headingTitle">
                   <p>持続可能な<br />医療へと変革する<br />プロフェッショナル</p>
                 </h2>
-                <div class="top-hero-swiper-headingText c-heading-text">
-                  <p>テクロスは、医療業界のあらゆるステークホルダーを支援する企業です。</p>
+                <div class="top-hero-swiper-headingText">
+                  <p>テクロスは、医療業界のあらゆるステークホルダーを<br class="_sp" />支援する企業です。</p>
                   <p>営業やマーケティングの領域にサイエンスの視点を取り入れ、</p>
-                  <p>医療産業の持続的な発展に寄与することを目指しています。</p>
+                  <p>医療産業の持続的な発展に寄与することを<br class="_sp" />目指しています。</p>
                 </div>
               </div>
               <div class="top-hero-swiper-link">
-                <a href="#" class="c-link-long c-inter">
+                <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>about.html" class="c-link-long c-inter">
                   <p>Who We Are</p>
                 </a>
               </div>
@@ -70,31 +70,39 @@
             <div class="our-services-wrapper">
               <h2 class="our-services-wrapper-title c-inter"><span class="c-title-color">Our</span> Services</h2>
               <p>医療の基盤を支えるEvidenceを、未来へつながる医療の力へ。その変革に必要な専門領域を揃えています。</p>
+              <div class="our-services-wrapper-pickup">
+                <div class="our-services-wrapper-pickupContent">
+                  <div class="our-services-wrapper-pickupContentText">
+                    <h3>データサイエンス事業</h3>
+                    <p>医療領域における市場調査、市場分析から、マーケティング戦略の立案を含むコンサルティングを行います。 医療現場と企業をつなぐための市場のunmet
+                      needsの探索、製品導入後のマーケティング活動、販売活動の支援、研究会の組織化などを総合的にサポートします。</p>
+                    <a href="#">
+                      <p class="our-services-wrapper-pickupContentMore c-case-list-more _pc">もっと見る</p>
+                    </a>
+                  </div>
+                  <div>
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/data-science.jpg" alt="データサイエンス事業">
+                  </div>
+                </div>
+                <div class="our-services-wrapper-pickupContent _reverse">
+                  <div class="our-services-wrapper-pickupContentText">
+                    <h3>Webデジタルマーケティング事業</h3>
+                    <p>循環器領域の専門サイト「TCROSS NEWS®」を通じて、医薬品・医療機器を対象とした広範囲のプロモーション活動をお手伝いします。
+                      Web広告、学術集会や製品に関連するサイトの制作、管理を請け負います。</p>
+                    <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/marketing.html">
+                      <p class="our-services-wrapper-pickupContentMore c-case-list-more _pc">もっと見る</p>
+                    </a>
+                  </div>
+                  <div>
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/data-science.jpg" alt="データサイエンス事業">
+                  </div>
+                </div>
+              </div>
               <div class="our-services-wrapper-list">
                 <div class="our-services-wrapper-list-busines">
-                  <a href="#"><img src="../../<%= ASSET_PATH %>asset/img/top/our-services1.jpg" alt="データサイエンス事業"></a>
-                  <h3>データサイエンス事業</h3>
-                  <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
-                    国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
-                </div>
-
-                <div class="our-services-wrapper-list-busines">
-                  <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/clinical.html"><img src="../../<%= ASSET_PATH %>asset/img/top/our-services2.jpg" alt="臨床研究サポート事業"></a>
-                  <h3>臨床研究サポート事業</h3>
-                  <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
-                    国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
-                </div>
-
-                <div class="our-services-wrapper-list-busines">
-                  <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/event.html"><img src="../../<%= ASSET_PATH %>asset/img/top/our-services3.jpg" alt="イベントコーディネート事業"></a>
+                  <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/event.html"><img
+                      src="../../<%= ASSET_PATH %>asset/img/top/our-services3.jpg" alt="イベントコーディネート事業"></a>
                   <h3>イベントコーディネート事業</h3>
-                  <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
-                    国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
-                </div>
-
-                <div class="our-services-wrapper-list-busines">
-                  <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/marketing.html"><img src="../../<%= ASSET_PATH %>asset/img/top/our-services4.jpg" alt="WEB マーケティング事業"></a>
-                  <h3>WEB マーケティング事業</h3>
                   <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
                     国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
                 </div>
@@ -108,17 +116,19 @@
                 </div>
 
                 <div class="our-services-wrapper-list-busines">
+                  <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/clinical.html"><img
+                      src="../../<%= ASSET_PATH %>asset/img/top/our-services2.jpg" alt="臨床研究サポート事業"></a>
+                  <h3>臨床研究サポート事業</h3>
+                  <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
+                    国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
+                </div>
+
+                <div class="our-services-wrapper-list-busines">
                   <div><img src="../../<%= ASSET_PATH %>asset/img/top/our-services6.jpg" alt="コンサルティング事業"></div>
                   <h3>コンサルティング事業</h3>
                   <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
                     国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
                 </div>
-              </div>
-
-              <div class="our-services-wrapper-link">
-                <a href="#" class="c-link-long c-inter">
-                  <p>Our Services</p>
-                </a>
               </div>
             </div>
           </section>
@@ -130,7 +140,7 @@
               <h2 class="c-explanation-title">
                 テクロスは<br class="_pc" />医療業界の発展を<br />一緒に目指す仲間を<br class="_pc" />募集しています
               </h2>
-              <div class="recruit-explanation-text c-explanation-text">
+              <div class="recruit-explanation-text">
                 <p>テクロスでは、ニュートラルな視点と深い専門性、そして情熱を共有し、 <br class="_pc" />
                   循環器医療に持続的な価値を創出していく仲間を求めています。</p>
               </div>
@@ -167,6 +177,8 @@
 
           <%- include('/common/_contact') %>
             <%- include('/common/_footer', { meta }) %>
+              <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+              <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
               <script src="<%= meta.basePath %><%= ASSET_PATH %>asset/js/main.js"></script>
       </body>
 
