--- a/src/views/jp/services/clinical.ejs
+++ b/src/views/jp/services/clinical.ejs
@@ -12,7 +12,7 @@
 
                     <ul class="c-breadcrumbs c-wrapper">
                         <li><a href="/">Top</a></li>
-                        <li>＞</li>
+                        <li>▶︎</li>
                         <li>臨床研究サポート事業</li>
                     </ul>
 
@@ -221,7 +221,7 @@
                                     <img src="../../../<%= ASSET_PATH %>asset/img/services/event_case1.jpg"
                                         alt="高度な専門人材">
                                 </div>
-                                <p class="c-case-list-more js-modal _sp" data-modal="1">more</p>
+                                <p class="c-case-list-more js-modal _sp" data-modal="5">more</p>
 
                             </li>
                             <li>
@@ -237,7 +237,7 @@
                                     <img src="../../../<%= ASSET_PATH %>asset/img/services/event_case2.jpg"
                                         alt="高度な専門人材">
                                 </div>
-                                <p class="c-case-list-more js-modal _sp" data-modal="2">more</p>
+                                <p class="c-case-list-more js-modal _sp" data-modal="6">more</p>
 
                             </li>
                         </ul>
@@ -391,6 +391,11 @@
 
                     <%- include('/common/_contact') %>
                         <%- include('/common/_footer', { meta }) %>
+                            <script>
+                                window.__ENV__ = {
+                                    ENV: "<%= ASSET_PATH %>",
+                                };
+                            </script>
                             <script src="<%= meta.basePath %><%= ASSET_PATH %>asset/js/main.js"></script>
 
             </body>
